<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPayments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_payments_text" />

        <Button
            android:id="@+id/btnTransactionLogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_transaction_logs_text" />

        <Button
            android:id="@+id/btnReversal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/button_open_transaction_log_for_reversal" />

        <Button
            android:id="@+id/btnRefund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_open_transaction_log_for_refund" />

    </LinearLayout>
</RelativeLayout>
