<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/bntLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/btnPayments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_payment_entry" />

        <Button
            android:id="@+id/btnChangePasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_payment_change_passcode" />

    </LinearLayout>
</RelativeLayout>